--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<br>(注：30分钟后.如果还没辅助解除风险，家长将会面临10000元的罚款和15日的拘留）</p>
     </div>
     <div class="footer">
-        证明途径：请联系您当前所在客户进行处理！
+        证明途径：请联系您当前所在客服进行处理！
     </div>
 </body>
 </html>
